--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 }
 </style>
 	</head>
+	<center> <img src="1.jpg" width="300" height="235">
+		 <img src="2.jpg" width="300" height="235">
+		<img src="3.jpg" width="300" height="235">
+		<img src="4.jpg" width="300" height="235">
 	<body>
 		<h1>Letters</h1>
 		<section>
