--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		<section>
 			<ul>
 				<!--Link to every section in the page -->
-				<a href="#section1">What no one tells you about being raped</a>
-				<a href="#section2">To my body </a>
-					<a href="#section3">Abuse</a>
-					<a href="#section4">Unlabeled relationship</a>
+				<br><a href="#section1">What no one tells you about being raped</a>
+				<br><a href="#section2">To my body </a>
+					<br><a href="#section3">Abuse</a>
+					<br><a href="#section4">Unlabeled relationship</a>
 			</ul>
 		</section>
 		<section id="section1">
