--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<meta charset="utf-8">
 		<title>Our Letters</title>
 		<style>
-		h1 {
-  color: aqua;
+		h1 .highlight {
+  color: white;
   text-align: center;
+highlight: #009999;
+			
 }
 
 		h3 {
@@ -28,7 +30,7 @@
   color: gray;
   font-size: 20px;
   font-weight: bold;
-  font-style: italic;
+  font-family: Courier New;
 }
 </style>
 	</head>
