--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 		<title>Our Letters</title>
 		<style>
-		h1 .highlight {
+		h1  {
   color: white;
   text-align: center;
-highlight: #009999;
+background-color: #009999;
 			
 }
 
