--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 		h1  {
   color: white;
   text-align: center;
+  font-family: Lucida Console;
   background-color: #009999;
 			
 }
 
 		h3 {
-  color: skyblue;
+  color: black;
+  background-color: #009999
   text-align: center;
+  font-family: Lucida Console;
 }
 
 		h2 {
-  color: cyan;
+  color: #595959;
   text-align: center;
 }
 
