--- a/readmore1.html
+++ b/readmore1.html
@@ -8,14 +8,15 @@
 		color: black;
 		font-size: 20px;
 		font-weight: bold;
+		font-family: Georgia;
 		text-align: center;
 			}
   
 		p {
 		color: navy;
-  font-size: 20px;
-  font-weight: bold;
-  font-style: italic;
+  		font-size: 20px;
+  		font-weight: bold;
+		font-family: Courier New;
 			}
  
   
