--- a/readmore1.html
+++ b/readmore1.html
@@ -22,7 +22,7 @@
   
 		</style>
 	</head>
-		<body> <h1> What no one tells you about being raped </title></h1>
+		<body> <h1> What no one tells you about being raped </h1>
 		<br>
 		<br>
 		<br>
