--- a/readmore2.html
+++ b/readmore2.html
@@ -7,22 +7,26 @@
 		<style>
 		h1 {
 		color: black;
-		font-size: 20px;
 		font-weight: bold;
+		font-family: Georgia;
 		text-align: center;
 			}
   
 		p {
 		color: navy;
-  font-size: 20px;
-  font-weight: bold;
-  font-style: italic;
+  		font-weight: bold;
+		font-family: Courier New;
+		margin-right: 150px;
+		margin-left: 150px;
 			}
  
   
 		</style>
 	</head>
 		<body> <h1> To My Body</h1>
+		<br>
+		<br>
+		<br>
 		<p> I never thought that the day would come where I am able to appreciate you and thank you. 
 		But here we are. I have realized all that you do for me, and my heart is filled with gratitude. 
 		I have tortured you, and I am so, so incredibly sorry. From here on out, I will treat you with the respect you deserve. 
