--- a/readmore3.html
+++ b/readmore3.html
@@ -7,22 +7,26 @@
 		<style>
 		h1 {
 		color: black;
-		font-size: 20px;
 		font-weight: bold;
+		font-family: Georgia;
 		text-align: center;
 			}
   
 		p {
 		color: navy;
-  font-size: 20px;
-  font-weight: bold;
-  font-style: italic;
+  		font-weight: bold;
+		font-family: Courier New;
+		margin-right: 150px;
+		margin-left: 150px;
 			}
  
   
 		</style>
 	</head>
 		<body> <h1> Abuse </h1>
+		<br>
+		<br>
+		<br>
 		<p> A word so little spoken about it. 
 			A word so softly spoken sex seems more glorified and yet it happens more often. 
 			Recently I've spoken to so many people about this each with their own stories, stories of heartbreak so wild you could see them no longer, or mental disarray thoughts were no longer legitimate but worst of all of abuse so often it seems the norm.
