--- a/readmore4.html
+++ b/readmore4.html
@@ -6,22 +6,26 @@
 		<style>
 		h1 {
 		color: black;
-		font-size: 20px;
 		font-weight: bold;
+		font-family: Georgia;
 		text-align: center;
 			}
   
 		p {
 		color: navy;
-  font-size: 20px;
-  font-weight: bold;
-  font-style: italic;
+  		font-weight: bold;
+		font-family: Courier New;
+		margin-right: 150px;
+		margin-left: 150px;
 			}
  
   
 		</style>
 	</head>
-		<body> <h1> Unlabeled relationship </title>
+	<body> <h1> Unlabeled relationship </h1>
+		<br>
+		<br>
+		<br>
 		<p> I wonder what happened between us. I used to wake up with your “Good morning” messages talk with you all day and at night with a “Goodnight”. I seldom ask myself what happened, what goes wrong? what was the reason we end up like this? was it me? was it because fighting become our habit or maybe we just don’t deserve each other? but those are just an unanswered question.
 		<p> Everything goes black and all i was thinking that time was i need you back, i need you back in my diurnal rhythm. I miss the “US” even though that “US” was just you by yourself and me on my own. I miss the way you call my name and the way you smile. I miss our midnight conversations and your songs especially when you’re asking me this remarkable question “Do you want me to sing for you?” I miss everything, i miss everything about you.
 		<p> Moving on wasn’t that easy since our relationship was unlabeled i don’t know where to start and i don’t know how. Would it be by cutting my hair first? Changing the way i look or changing myself. I blamed myself for what happen and the hardest part was i don’t know how and when will this pain will stop. Should i drink and go to parties or should i cry so i can release this pain? i did both but nothing happened i just end up stalking you on social media pretending that i’m happy for you but i wasn’t it was so unfair that you’re happy while i’m here wretched!. All i know is that i have to let go and be better not for you but for myself and i have to get rid of this emotion.
